<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.laboratorio4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_arte"
        android:name="com.example.laboratorio4.ui.galeria.GaleriaFragment"
        android:label="@string/title_Arte"
        tools:layout="@layout/fragment_arte" >
        <action
            android:id="@+id/action_navigation_arte_to_fragment_galeriadet"
            app:destination="@id/fragment_galeriadet" />
    </fragment>

    <fragment
        android:id="@+id/navigation_evento"
        android:name="com.example.laboratorio4.ui.evento.EventoFragment"
        android:label="@string/title_eventos"
        tools:layout="@layout/fragment_eventos" >
        <action
            android:id="@+id/action_navigation_evento_to_locationFragment"
            app:destination="@id/locationFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_Artista"
        android:name="com.example.laboratorio4.ui.artista.ArtistaFragment"
        android:label="@string/title_artista"
        tools:layout="@layout/fragment_artista" >
        <action
            android:id="@+id/action_navigation_Artista_to_artistDetFragment"
            app:destination="@id/artistDetFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragment_galeriadet"
        android:name="com.example.laboratorio4.ui.galeria.fragment_galeriadet"
        android:label="fragment_galeriadet"
        tools:layout="@layout/fragment_galeriadet" />
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.example.laboratorio4.ui.evento.LocationFragment"
        android:label="fragment_location"
        tools:layout="@layout/fragment_location" >
        <action
            android:id="@+id/action_locationFragment_to_locationDetailsFragment"
            app:destination="@id/locationDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationDetailsFragment"
        android:name="com.example.laboratorio4.ui.evento.LocationDetailsFragment"
        android:label="fragment_location_details"
        tools:layout="@layout/fragment_location_details" />
    <fragment
        android:id="@+id/artistDetFragment"
        android:name="com.example.laboratorio4.ui.artista.ArtistDetFragment"
        android:label="fragment_artist_det"
        tools:layout="@layout/fragment_artist_det" />
</navigation>