<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tam3"
    android:layout_marginBottom="@dimen/margen5"
    app:cardCornerRadius="@dimen/margen5">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgArteGaleria"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tam3"
            android:background="@drawable/img_arte2"
            android:scaleType="centerCrop">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/margen3"
            android:paddingBottom="@dimen/margen8"
            android:background="@color/grisdegradado">
            <TextView
            android:id="@+id/tvArtista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strNombreArtista"
            android:textColor="@color/white"
            android:textSize="@dimen/tamTexto3">
        </TextView>
            <TextView
                android:id="@+id/tvTituloArte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strTituloArte"
                android:textColor="@color/white"
                android:textSize="@dimen/tamtexto2">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/chkLikeArte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>
                <TextView
                    android:id="@+id/tvLikeArte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strLikeMeGusta"
                    android:textSize="@dimen/tamTexto3"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margen8">
                </TextView>
                <TextView
                    android:id="@+id/tvPrecioArte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strPrecioArte"
                    android:textSize="@dimen/tamTexto3"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margen8">
                </TextView>
                <TextView
                    android:id="@+id/tvMonedaArte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strMoneda"
                    android:textSize="@dimen/tamTexto3"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.cardview.widget.CardView>




