<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgLog"
        android:layout_width="278dp"
        android:layout_height="234dp"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        android:background="@drawable/logo_among"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:hint="@string/hint_UserName"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="@dimen/margen5"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:hint="@string/hint_Password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/margen5"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserName"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/strLogin"
        android:textColorHint="@color/white"
        android:textSize="@dimen/tamtexto2"
        android:background="@drawable/shape_button"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        android:textSize="@dimen/tamtexto2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/Qmark"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="@color/Rosa1"
        android:textStyle="italic"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Qmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        android:text="@string/QMark"
        android:textColor="@color/Rosa1"
        android:textSize="@dimen/tamtexto2"
        app:layout_constraintLeft_toLeftOf="@id/registrar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>