<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity_CrearCuenta">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tam2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Naranja1"
        android:id="@+id/tbCrearCuenta"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:hint="@string/stremail"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="@dimen/margen5"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginRight="@dimen/margen4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#BFBFBF"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tvPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:hint="@string/hint_Password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/margen5"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginRight="@dimen/margen4"
       android:layout_marginTop="@dimen/margen1"
        android:background="#BFBFBF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tvConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:hint="@string/ConfirmarPW"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/margen5"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginRight="@dimen/margen4"
        android:layout_marginTop="@dimen/margen1"
        android:background="#BFBFBF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPass"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:hint="@string/HintCreate"
        android:textSize="@dimen/tamtexto2"
        android:textColorHint="@color/white"
        android:background="@drawable/shape_button"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        android:layout_marginTop="@dimen/margen1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPass"



        />

</androidx.constraintlayout.widget.ConstraintLayout>
