<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_galeriadet">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abGaleriadet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tam3">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolcolapse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/rosa1">
            <ImageView
                android:id="@+id/imgdetallearte"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img_arte1"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true"
                android:transitionName="@string/transition_galeriadet">

            </ImageView>
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tbGaleriaDet"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margen2"
                    android:theme="@style/Theme.Overlay"
                    app:layout_collapseMode="pin">
                </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/margen6">
            <TextView
                android:id="@+id/tvArtistaDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamtexto3"
                android:text="@string/strNombreArtista"
                android:paddingLeft="@dimen/margen8"
                android:paddingRight="@dimen/margen8" />

            <TextView
                android:id="@+id/tvCategoriaArtista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamtexto2"
                android:text="@string/strCategoriaGaleria"
                android:paddingLeft="@dimen/margen8"
                android:paddingRight="@dimen/margen8"/>
            <View
               android:layout_width="match_parent"
                android:layout_height="@dimen/tam2"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvArteDet1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamtexto3"
                android:layout_gravity="center_horizontal"
                android:text="@string/strCategoriaGaleria"
                android:textStyle="bold"
                android:paddingTop="@dimen/margen8"/>
            <TextView
                android:id="@+id/tvDescripcionArte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamtexto2"
                android:text="@string/strDescripcionGaleria"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/tamtexto3"
                android:paddingLeft="@dimen/tamtexto3"
                android:paddingRight="@dimen/tamtexto3"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/like_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/ic_heart_vacio"
        app:layout_anchor="@+id/abGaleriadet"
        app:layout_anchorGravity="bottom|end"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>